src/pages/services.module.scss
@import url('https://fonts.googleapis.com/css?family=Lobster|Montserrat+Alternates&display=swap');

/* BOTTOM CONTENT STYLES */

.container {
  position: relative;
  display: flex;
  flex-direction: column;
  text-align: center;
  position: relative;
  height: 100vh;
  width: 100%;
  background: linear-gradient(180deg, rgba(255,255,255,1) 5%, rgba(231,79,110,1) 100%);
  border-bottom-left-radius: 80% 10%;
  border-bottom-right-radius: 80% 10%;

  .header {
    display: flex;
    flex-direction: column;
    align-items: center;
    .title {
      margin-bottom: 1.5vh;
      width: 22vw;
      background: #fff;
      font-family: 'Lobster', cursive;
      font-size: 2.75vw;
      color: #192738;
      z-index: 9;
    }
    .subtext {
      padding: 0 25vh;
      font-family: 'Montserrat Alternates', sans-serif;
      font-size: 1.5vw;
      color: #192738;
    }
  }
  .detail {
    height: 2px;
    background-color: #192738;
    border: 0;
    position: relative;
    top: -10.5vh;
    z-index: 8;
    width: 88%;
    text-align: center;
  }
  .illustration {
    // display: none;
    position: absolute;
    // background: yellow;
    z-index: 9;
    width: 100%;
    top: 32vh;
    left: -10vh;
    .object {
      background-image: url('../images/services-01.svg');
      background-size: cover;
      background-repeat: no-repeat;
      background-position: 20% 50%;
      height: 80vh;
      width: auto;
      margin-bottom: 5vh;
      // width: auto;
      position: relative;
    }
  }
}



/* Media-queries Section */
@media (max-width: 768px) {
  .container {
    .header {
      overflow: hidden;
      .title {
        font-size: 2.25rem;
        width: 36vw;
      }
      .subtext {
        font-size: 1.25rem;
        width: 65%;
      }
      .detail {
        top: -10.5vh;
      }
    }
  }
}

@media (max-width: 575.98px) {
  .container {
    .header {
      .title {
        font-size: 1.25rem;
      }
      .subtext {
        font-size: 1rem;
        padding: 0 4vw;
      }
    }
    .illustration {
      top: 53vh;
    }
  }
}

